--- a/Examen3/WebApp/Pages/Compra/Edit.cshtml
+++ b/Examen3/WebApp/Pages/Compra/Edit.cshtml
@@ -1,55 +1,58 @@
 ﻿@page
-@model WebApp.Pages.Empleado.EditModel
+@model WebApp.Pages.Compra.EditModel
 @{
 }
-
-
 <div id="AppEdit" class="container" data-entity="@JsonSerializer.Serialize(Model.Entity)" v-cloak>
     <div class="card">
         <div class="card-header">
-            @(Model.id.HasValue? "Actualizar": "Nuevo Empleado")
+            @(Model.id.HasValue? "Actualizar": "Nueva Compra")
         </div>
         <div class="card-body">
             <form id="FormEdit">
-                <input type="hidden" asp-for="Entity.IdEmpleado" v-model="Entity.IdEmpleado" />
-
+                <input type="hidden" asp-for="Entity.IdCompra" v-model="Entity.IdCompra" />
 
                 <div class="form-group mb-3">
-                    <label for="Entity.IdTipoIdentificacion" class="form-label">Tipo Identificacion</label>
-
-                    <select asp-for="Entity.IdTipoIdentificacion" class="form-select"
-                            v-model="Entity.IdTipoIdentificacion" asp-items="@(new SelectList(Model.TipoIdentificacionLista,"IdTipoIdentificacion","Descripcion"))" required>
+                    <label for="Entity.ClientesId" class="form-label">Identificacion Cliente</label>
+                    <select asp-for="Entity.ClientesId" class="form-select"
+                            v-model="Entity.ClientesId" asp-items="@(new SelectList(Model.ClienteLista,"ClientesId","NombreCompleto"))" required>
                     </select>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="Entity.Identificacion" class="form-label">Identificacion</label>
-                    <input type="text" class="form-control" asp-for="Entity.Identificacion" v-model="Entity.Identificacion" maxlength="250" required>
+                    <label for="Entity.ProductoId" class="form-label">Codigo Producto</label>
+                    <select asp-for="Entity.ProductoId" class="form-select"
+                            v-model="Entity.ProductoId" asp-items="@(new SelectList(Model.ProductoLista,"ProductoId","Descripcion"))" required>
+                    </select>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="Entity.Nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" asp-for="Entity.Nombre" v-model="Entity.Nombre" maxlength="250" required>
+                    <label for="Entity.FechaCompra" class="form-label">Fecha Compra</label>
+                    <input type="date" class="form-control" asp-for="Entity.FechaCompra" v-model="Entity.FechaCompra" maxlength="10" required>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="Entity.PrimerApellido" class="form-label">Primer Apellido</label>
-                    <input type="text" class="form-control" asp-for="Entity.PrimerApellido" v-model="Entity.PrimerApellido" maxlength="250" required>
+                    <label for="Entity.Monto" class="form-label">Monto</label>
+                    <input type="number" class="form-control" asp-for="Entity.Monto" v-model="Entity.Monto" maxlength="250" required>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="Entity.SegundoApellido" class="form-label">Segundo Apellido</label>
-                    <input type="text" class="form-control" asp-for="Entity.SegundoApellido" v-model="Entity.SegundoApellido" maxlength="250" required>
+                    <label for="Entity.Impuesto" class="form-label">Impuesto</label>
+                    <input type="number" class="form-control" asp-for="Entity.Impuesto" v-model="Entity.Impuesto" maxlength="250" required>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="Entity.Edad" class="form-label">Edad</label>
-                    <input type="number" class="form-control" asp-for="Entity.Edad" v-model="Entity.Edad" required>
+                    <label for="Entity.Total" class="form-label">Total</label>
+                    <input type="number" class="form-control" asp-for="Entity.Total" v-model="Entity.Total" maxlength="250" required>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="Entity.FechaNacimiento" class="form-label">Fecha Nacimiento </label>
-                    <input type="date" class="form-control" asp-for="Entity.FechaNacimiento" v-model="Entity.FechaNacimiento" required>
+                    <label for="Entity.Observaciones" class="form-label">Observaciones</label>
+                    <input type="text" class="form-control" asp-for="Entity.Observaciones" v-model="Entity.Observaciones" maxlength="1000" required>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="Entity.Estado" class="form-label">Estado</label>
+                    <input type="text" class="form-control" asp-for="Entity.Estado" v-model="Entity.Estado" required>
                 </div>
 
                 <div class="row">
@@ -58,20 +61,12 @@
                             @(Model.id.HasValue? "Actualizar": "Agregar")
                         </button>
                     </div>
-
                 </div>
-
             </form>
-
         </div>
     </div>
-
 </div>
-
 @section Scripts
-{ 
-
-    <script defer src="~/App/Empleado/Edit.js"></script>
-
-
+{
+    <script defer src="~/App/Compra/Edit.js"></script>
 }
