--- a/Examen3/WebApp/Pages/Compra/Grid.cshtml
+++ b/Examen3/WebApp/Pages/Compra/Grid.cshtml
@@ -1,15 +1,14 @@
 ﻿@page
-@model WebApp.Pages.Empleado.GridModel
+@model WebApp.Pages.Compra.GridModel
 @{
+    ViewData["Title"] = "Compra";
 }
 <div class="container-fluid">
-
     <div class="card">
         <div class="card-header">
-            Empleado
+            Compra
         </div>
         <div class="card-body">
-
             <a  class="btn btn-primary" asp-page="Edit">
                 <i class='bx bxs-add-to-queue'></i>
             </a>
@@ -19,14 +18,17 @@
                     <table id="GridView" class="table table-bordered table table-striped table table-hover">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Tipo Identificacion</th>
-                                <th>Identificacion</th>
-                                <th>Nombre</th>
-                                <th>PrimerApellido</th>
-                                <th>SegundoApellido</th>
-                                <th>Edad</th>
-                                <th>FechaNacimiento</th>
+                                <th>Id Compra</th>
+                                <th>Identificacion Cliente</th>
+                                <th>Nombre Cliente</th>
+                                <th>Codigo Producto</th>
+                                <th>Nombre Producto</th>
+                                <th>Fecha Compra</th>
+                                <th>Monto</th>
+                                <th>Impuesto</th>
+                                <th>Total</th>
+                                <th>Observaciones</th>
+                                <th>Estado</th>
                                 <th>Acción</th>
                             </tr>
                         </thead>
@@ -34,18 +36,21 @@
                             @foreach (var item in Model.GridList)
                             {
                             <tr>
-                                <td>@item.IdEmpleado</td>
-                                <td>@item.TipoIdentificacion.Descripcion</td>
-                                <td>@item.Identificacion</td>
-                                <td>@item.Nombre</td>
-                                <td>@item.PrimerApellido</td>
-                                <td>@item.SegundoApellido</td>
-                                <td>@item.Edad</td>
-                                <td>@item.FechaNacimiento.ToString("dd/MM/yyyy")</td>
+                                <td>@item.IdCompra</td>
+                                <td>@item.Cliente.ClienteId</td>
+                                <td>@item.Cliente.NombreCompleto</td>
+                                <td>@item.Producto.ProductoId</td>
+                                <td>@item.Producto.Descripcion</td>
+                                <td>@item.FechaCompra</td>
+                                <td>@item.Monto</td>
+                                <td>@item.Impuesto</td>
+                                <td>@item.Total</td>
+                                <td>@item.Observaciones</td>
+                                <td>@item.Estado</td>
                                 <td>
-                                    <a class="btn btn-primary" asp-page="Edit" asp-route-id="@item.IdEmpleado"><i class='bx bx-edit-alt'></i></a>
+                                    <a class="btn btn-primary" asp-page="Edit" asp-route-id="@item.IdCompra"><i class='bx bx-edit-alt'></i></a>
 
-                                    <button type="button" class="btn btn-danger" onclick="EmpleadoGrid.OnClickEliminar(@item.IdEmpleado)">
+                                    <button type="button" class="btn btn-danger" onclick="CompraGrid.OnClickEliminar(@item.IdCompra)">
                                         <i class='bx bx-trash'></i>
                                     </button>
                                 </td>
@@ -53,22 +58,11 @@
                             }
                         </tboby>
                     </table>
-
                 </div>
             </div>
-
-
-
         </div>
     </div>
-
-
 </div>
-
-@section Scripts{ 
-
-    
-
-    <script defer src="~/App/Empleado/Grid.js"></script>
-
+@section Scripts{
+    <script defer src="~/App/Compra/Grid.js"></script>
 }
