--- a/Examen3/WebApp/Pages/Producto/Edit.cshtml
+++ b/Examen3/WebApp/Pages/Producto/Edit.cshtml
@@ -1,55 +1,25 @@
 ﻿@page
-@model WebApp.Pages.Empleado.EditModel
+@model WebApp.Pages.Producto.EditModel
 @{
+    ViewData["Title"] = "Editar Producto";
 }
-
-
 <div id="AppEdit" class="container" data-entity="@JsonSerializer.Serialize(Model.Entity)" v-cloak>
     <div class="card">
         <div class="card-header">
-            @(Model.id.HasValue? "Actualizar": "Nuevo Empleado")
+            @(Model.id.HasValue? "Actualizar": "Nuevo Producto")
         </div>
         <div class="card-body">
             <form id="FormEdit">
-                <input type="hidden" asp-for="Entity.IdEmpleado" v-model="Entity.IdEmpleado" />
-
+                <input type="hidden" asp-for="Entity.ProductoId" v-model="Entity.ProductoId" />
 
                 <div class="form-group mb-3">
-                    <label for="Entity.IdTipoIdentificacion" class="form-label">Tipo Identificacion</label>
-
-                    <select asp-for="Entity.IdTipoIdentificacion" class="form-select"
-                            v-model="Entity.IdTipoIdentificacion" asp-items="@(new SelectList(Model.TipoIdentificacionLista,"IdTipoIdentificacion","Descripcion"))" required>
-                    </select>
+                    <label for="Entity.Descripcion" class="form-label">Descripcion</label>
+                    <input type="text" class="form-control" asp-for="Entity.Descripcion" v-model="Entity.Descripcion" maxlength="1000" required>
                 </div>
 
                 <div class="form-group mb-3">
-                    <label for="Entity.Identificacion" class="form-label">Identificacion</label>
-                    <input type="text" class="form-control" asp-for="Entity.Identificacion" v-model="Entity.Identificacion" maxlength="250" required>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="Entity.Nombre" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" asp-for="Entity.Nombre" v-model="Entity.Nombre" maxlength="250" required>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="Entity.PrimerApellido" class="form-label">Primer Apellido</label>
-                    <input type="text" class="form-control" asp-for="Entity.PrimerApellido" v-model="Entity.PrimerApellido" maxlength="250" required>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="Entity.SegundoApellido" class="form-label">Segundo Apellido</label>
-                    <input type="text" class="form-control" asp-for="Entity.SegundoApellido" v-model="Entity.SegundoApellido" maxlength="250" required>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="Entity.Edad" class="form-label">Edad</label>
-                    <input type="number" class="form-control" asp-for="Entity.Edad" v-model="Entity.Edad" required>
-                </div>
-
-                <div class="form-group mb-3">
-                    <label for="Entity.FechaNacimiento" class="form-label">Fecha Nacimiento </label>
-                    <input type="date" class="form-control" asp-for="Entity.FechaNacimiento" v-model="Entity.FechaNacimiento" required>
+                    <label for="Entity.Estado" class="form-label">Estado</label>
+                    <input type="text" class="form-control" asp-for="Entity.Estado" v-model="Entity.Estado" maxlength="250" required>
                 </div>
 
                 <div class="row">
@@ -70,8 +40,5 @@
 
 @section Scripts
 { 
-
-    <script defer src="~/App/Empleado/Edit.js"></script>
-
-
+    <script defer src="~/App/Producto/Edit.js"></script>
 }
