--- a/Examen3/WebApp/Pages/Producto/Grid.cshtml
+++ b/Examen3/WebApp/Pages/Producto/Grid.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
-@model WebApp.Pages.Empleado.GridModel
+@model WebApp.Pages.Producto.GridModel
 @{
+    ViewData["Title"] = "Producto";
 }
 <div class="container-fluid">
-
     <div class="card">
         <div class="card-header">
-            Empleado
+            Producto
         </div>
         <div class="card-body">
 
@@ -19,14 +19,9 @@
                     <table id="GridView" class="table table-bordered table table-striped table table-hover">
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Tipo Identificacion</th>
-                                <th>Identificacion</th>
-                                <th>Nombre</th>
-                                <th>PrimerApellido</th>
-                                <th>SegundoApellido</th>
-                                <th>Edad</th>
-                                <th>FechaNacimiento</th>
+                                <th>Codigo Producto</th>
+                                <th>Descripcion</th>
+                                <th>Estado</th>
                                 <th>Acción</th>
                             </tr>
                         </thead>
@@ -34,18 +29,13 @@
                             @foreach (var item in Model.GridList)
                             {
                             <tr>
-                                <td>@item.IdEmpleado</td>
-                                <td>@item.TipoIdentificacion.Descripcion</td>
-                                <td>@item.Identificacion</td>
-                                <td>@item.Nombre</td>
-                                <td>@item.PrimerApellido</td>
-                                <td>@item.SegundoApellido</td>
-                                <td>@item.Edad</td>
-                                <td>@item.FechaNacimiento.ToString("dd/MM/yyyy")</td>
+                                <td>@item.ProductoId</td>
+                                <td>@item.Descripcion</td>
+                                <td>@item.Estado</td>
                                 <td>
-                                    <a class="btn btn-primary" asp-page="Edit" asp-route-id="@item.IdEmpleado"><i class='bx bx-edit-alt'></i></a>
+                                    <a class="btn btn-primary" asp-page="Edit" asp-route-id="@item.ProductoId"><i class='bx bx-edit-alt'></i></a>
 
-                                    <button type="button" class="btn btn-danger" onclick="EmpleadoGrid.OnClickEliminar(@item.IdEmpleado)">
+                                    <button type="button" class="btn btn-danger" onclick="ProductoGrid.OnClickEliminar(@item.ProductoId)">
                                         <i class='bx bx-trash'></i>
                                     </button>
                                 </td>
@@ -53,22 +43,12 @@
                             }
                         </tboby>
                     </table>
-
                 </div>
             </div>
-
-
-
         </div>
     </div>
-
-
 </div>
 
 @section Scripts{ 
-
-    
-
-    <script defer src="~/App/Empleado/Grid.js"></script>
-
+    <script defer src="~/App/Producto/Grid.js"></script>
 }
