--- a/Examen3/WebApp/Pages/Shared/_LayoutTemplate.cshtml
+++ b/Examen3/WebApp/Pages/Shared/_LayoutTemplate.cshtml
@@ -1,10 +1,4 @@
-﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor Context;
-@{ 
-
-    var UsuarioSession = Context.HttpContext.Session.Get<Entity.UsuariosEntity>(IApp.UsuarioSession);
-
-}
-
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -340,7 +334,7 @@
                     <!-- User profile text-->
                     <div class="profile-text pt-1 dropdown">
                         <a href="#" class="dropdown-toggle u-dropdown w-100 text-white d-block position-relative" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                        @UsuarioSession?.Nombre</a>
+                        Usuario</a>
                         <div class="dropdown-menu animated flipInY" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="#">
                                 <i data-feather="user" class="feather-sm text-info me-1 ms-1"></i> My
