--- a/Examen3/WebApp/Pages/Index.cshtml
+++ b/Examen3/WebApp/Pages/Index.cshtml
@@ -1,11 +1,26 @@
 ﻿@page
 @model IndexModel
-@{
-    ViewData["Title"] = "Home page";
-}
+@{ ViewData["Title"] = "Pagina de inicio"; }
 
-<h1 class="text-center">
-    <br />
-    Dashboard
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/" />
+</head>
+<body>
+    <center>
+        <h1>Universidad Tecnológica Costarricense</h1><br>
+        <h1>Examen 3 Final</h1><br>
+        <h2>Programación VI</h2><br>
+        <h3>Profesora: Ana Lucía Matarrita Granados</h3><br>
+        <h2>Integrantes:</h2><br>
+        <h3>Jose Daniel Herrera Sibaja</h3><br>
+        <h3>Maykol Rojas</h3><br>
+        <h3>Kevin Abel Gutierrez</h3><br>
 
+        <h4>III Cuatrimestre 2021</h4>
+    </center>
+</body>
+</html>
