--- a/Examen3/WebApp/Pages/Cliente/Grid.cshtml
+++ b/Examen3/WebApp/Pages/Cliente/Grid.cshtml
@@ -33,7 +33,7 @@
                                 <td>@item.NombreCompleto</td>
                                 <td>@item.Direccion</td>
                                 <td>@item.Telefono</td>
-                                <td>@item.Estado</td>
+                                <td>@(item.Estado ? "Activo" : "Inactivo")</td>
                                 <td>
                                     <a class="btn btn-primary" asp-page="Edit" asp-route-id="@item.ClienteId"><i class='bx bx-edit-alt'></i></a>
 
